# pycounts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_polluxtroy3758/: __init__.py
src/pycounts_polluxtroy3758/data/: flatland.txt
tests/: test_pycounts_polluxtroy3758.py
