[tool.poetry]
name = "pycounts_polluxtroy3758"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["polluxtroy3758"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
