[tool.poetry]
name = "pycounts_polluxtroy3758"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["polluxtroy3758"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"